# MyPaint

./: .gitignore  CMakeLists.txt  README.md  main.cpp  paint.cpp  paint.hpp  shapes.hpp
